Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-4461

Not closing client connections

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Blocker
    • Resolution: Fixed
    • 6.2.0
    • 6.2.0, 7.0.0
    • Core
    • None

    Description

      Looks like we are not closing client connections correctly on the 6.2.x branch. After taking a server our of rotation for awhile.

      [bcall@l28 ~]$ ss -s
      Total: 18212 (kernel 18329)
      TCP:   18122 (estab 17141, closed 123, orphaned 4, synrecv 0, timewait 123/0), ports 152
      

      in traffic top:

                   CLIENT                                ORIGIN SERVER
      Requests     1.8     Head Bytes 492.0    Requests     1.8     Head Bytes 345.7
      Req/Conn     1.0     Body Bytes   0.0    Req/Conn     1.0     Body Bytes   0.0
      New Conn     1.8     Avg Size   269.0    New Conn     1.8     Avg Size   189.0
      Curr Conn    0.0     Net (bits)   3.9K   Curr Conn    0.0     Net (bits)   2.8K
      Active Con   6.6M    Resp (ms)    0.8
      Dynamic KA   0.0
      

      Looks like it is happening on the client connections to TLS ports (ip of the server removed):

      [bcall@l28 ~]$ ss -tn | grep 'XXX:44[3-4]' | wc -l
      12434
      

      And not on the non-TLS ports

      [bcall@l28 ~]$ ss -tn | grep 'XXX:8' | wc -l
      0
      

      Count of the fd for the traffic_server process:

      [bcall@l28 ~]$ sudo ls -l /proc/$(pidof traffic_server)/fd | wc -l
      18127
      

      Attachments

        Issue Links

          Activity

            People

              shinrich Susan Hinrichs
              bcall Bryan Call
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: