TS-4461: SSL Client Connections not closed.

(cherry picked from commit 456ade9ab35787d39d3414149a0ee04f44008268)